welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:30: error: value Red is not a member of object java.awt.Color
faireS(Color.Red)
             ^